--- a/logitech-webcam-c270/640x480/config.yaml
+++ b/logitech-webcam-c270/640x480/config.yaml
@@ -1,30 +1,30 @@
-# Moto G7 Power at 720p
+# Logitech HD Webcam C270
 
 #==============#
 # Camera Model #
 #==============#
 
 Camera:
-  name: "Moto G7 Power"
+  name: "Logitech HD Webcam C270"
   setup: "monocular"
   model: "perspective"
 
-  fx: 1019.469
-  fy: 1016.95
-  cx: 638.159
-  cy: 356.176
+  fx: 832.44
+  fy: 832.44
+  cx: 319.5
+  cy: 239.5
 
-  k1: 0.20571571683794693
-  k2: -1.3509055956819735
-  p1: -0.004306819896312867
-  p2: -0.001995878706976218
-  k3: 3.73593061733157
+  k1: -0.01672
+  k2: 1.683981
+  p1: 0
+  p2: 0
+  k3: -7.24369
 
-  fps: 30.0
-  cols: 1280
-  rows: 720
+  fps: 20.0
+  cols: 640
+  rows: 480
 
-  color_order: "RGB"
+  color_order: "Gray"
 
 
 #=====================#
@@ -32,8 +32,7 @@ Camera:
 #=====================#
 
 Preprocessing:
-  max_num_keypoints: 1000
-  ini_max_num_keypoints: 2000
+  min_size: 2000
 
 #================#
 # ORB Parameters #
@@ -41,10 +40,10 @@ Preprocessing:
 
 Feature:
   name: "default ORB feature extraction setting"
-  scale_factor: 1.2
-  num_levels: 8
-  ini_fast_threshold: 20
-  min_fast_threshold: 7
+  # scale_factor: 1.2
+  # num_levels: 8
+  # ini_fast_threshold: 20
+  # min_fast_threshold: 7
 
 #====================#
 # Mapping Parameters #
