--- a/motorola-g7-power/640x480/config.yaml
+++ b/motorola-g7-power/640x480/config.yaml
@@ -26,14 +26,12 @@ Camera:
 
   color_order: "RGB"
 
-
 #=====================#
 # Tracking Parameters #
 #=====================#
 
 Preprocessing:
-  max_num_keypoints: 1000
-  ini_max_num_keypoints: 2000
+  min_size: 800
 
 #================#
 # ORB Parameters #
@@ -53,6 +51,8 @@ Feature:
 Mapping:
   baseline_dist_thr_ratio: 0.02
   redundant_obs_ratio_thr: 0.9
+  num_covisibilities_for_landmark_generation: 20
+  num_covisibilities_for_landmark_fusion: 20
 
 #===========================#
 # PangolinViewer Parameters #
@@ -69,3 +69,12 @@ PangolinViewer:
   viewpoint_y: -20
   viewpoint_z: -0.1
   viewpoint_f: 2800
+
+#=========================#
+# LoopDetector Parameters #
+#=========================#
+
+LoopDetector:
+  enabled: true
+  reject_by_graph_distance: true
+  min_distance_on_graph: 50
